# Flowhub_backend_v1

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  manage.py  pyproject.toml
env/: .env.example
src/api/: urls.py
src/api/auth/: urls.py
src/api/auth/serializers/: login.py  register.py  verify_code.py
src/api/auth/views/: __init__.py  login.py  verify_code.py
src/api/category/: urls.py
src/api/category/serializers/: __init__.py  category.py
src/api/category/views/: __init__.py  category.py
src/api/course/: urls.py
src/api/course/serializers/: course.py  group.py
src/api/course/views/: course.py  group.py
src/api/organization/: urls.py
src/api/organization/serializers/: __init__.py  organization.py
src/api/organization/views/: organization.py
src/api/users/: urls.py
src/api/utils/otp/: send_check_otp.py
src/api/utils/phone/: normalize_phone.py
src/apps/attendance/migrations/: 0001_initial.py  0002_initial.py
src/apps/attendance/models/: __init__.py  attendance.py
src/apps/category/migrations/: 0001_initial.py
src/apps/category/models/: category.py
src/apps/common/: permissions.py
src/apps/common/models/: __init__.py  base.py
src/apps/course/migrations/: 0001_initial.py  0002_initial.py
src/apps/course/models/: __init__.py  course.py  group.py  group_schedule.py  lesson.py
src/apps/device/migrations/: 0001_initial.py  0002_initial.py
src/apps/device/models/: __init__.py  device.py  session.py
src/apps/notification/: apps.py
src/root/: jwt_middleware.py  settings.py  urls.py
(+44 files in other folders)
